# SnakeAttack

./: .gitignore  README.md  pyproject.toml
include/ansi_actions/: __init__.py  cursor.py  style.py
include/terminal/: __init__.py  draw.py  input.py  menu.py  screen.py  utilities.py
include/utils/: utilities.py
server/: echo-host.py
src/client/: .snake.py.swp  client_net.py  echo-client.py  snake.py
src/game/: player.py  snake.py  snake_attack.py  snake_attack_host.py
src/game/scenes/: fof.py  main_menu.py  root.py  scene.py  scenes.py  snake_attack.py
src/server/: echo-host.py  snake_attack_server.py
