[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["include/ansi_actions", "include/terminal"]

[project]
name = "snake-attack"
version = "0.1.0"
description = "A healthy snac for the snak"
authors = [{name = "Alex Lu", email = "mealex2007@gmail.com"}]
license = {text = "MIT"}
dependencies = [ ]
